--- a/policy-service/pom.xml
+++ b/policy-service/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!--<dependency>
+			<groupId>com.spring</groupId>
+			<artifactId>user-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>-->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
