--- a/policy-service/src/main/resources/application.yaml
+++ b/policy-service/src/main/resources/application.yaml
@@ -11,9 +11,9 @@ spring:
     password: Sahil@1402
  
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+   database-platform: org.hibernate.dialect.MySQLDialect
+   hibernate:
+    ddl-auto: update
  
 eureka:
   client:
