--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -66,6 +66,7 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<!-- Kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
@@ -82,6 +83,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>-->
+		<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <scope>runtime</scope>
+</dependency>
 	</dependencies>
 
 	<build>
