--- a/NewCustomerService1-main/src/main/resources/application.properties
+++ b/NewCustomerService1-main/src/main/resources/application.properties
@@ -53,7 +53,7 @@ server.port=8090
 spring.datasource.url=jdbc:mysql://localhost:3306/customersupport_db?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Sahil@1402
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -67,7 +67,7 @@ spring.h2.console.enabled=false
 # ============================
 # POLICY SERVICE CONFIG
 # ============================
-services.policy.base-url=http://localhost:8082/api/policies
+services.policy.base-url=http://localhost:8089/api/policies
 services.policy.connect-timeout-ms=3000
 services.policy.read-timeout-ms=5000
 
