--- a/policy-service/src/main/resources/application.yaml
+++ b/policy-service/src/main/resources/application.yaml
@@ -1,3 +1,28 @@
+#server:
+#  port: 8089
+# 
+#spring:
+#  application:
+#    name: policy-service
+# 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/policyDB
+#    username: root
+#    password: Sahil@1402
+# 
+#  jpa:
+#   database-platform: org.hibernate.dialect.MySQLDialect
+#   hibernate:
+#    ddl-auto: update
+# 
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+# 
+#
+#
+
 server:
   port: 8089
  
@@ -11,14 +36,24 @@ spring:
     password: Sahil@1402
  
   jpa:
-   database-platform: org.hibernate.dialect.MySQLDialect
-   hibernate:
-    ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+
+  # ✅ Kafka Configuration Added
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      group-id: ${spring.application.name}
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      auto-offset-reset: earliest
  
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
- 
-
-
