kafka added in user claimpolicy

--- a/NewCustomerService1-main/src/main/resources/application.properties
+++ b/NewCustomerService1-main/src/main/resources/application.properties
@@ -76,3 +76,13 @@ services.policy.read-timeout-ms=5000
 # ============================
 logging.level.root=INFO
 logging.level.org.springframework.web.client.RestTemplate=INFO
+
+# ============================
+# KAFKA CONFIG
+# ============================
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
