--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -92,8 +92,11 @@ spring:
         - id: notification-service
           uri: http://localhost:8087
           predicates:
-            - Path=/api/notifications/**		
-
+            - Path=/api/notifications/**	
+        - id: notification-service
+          uri: http://localhost:8087
+          predicates:
+           - Path=/api/admin/notifications/**  	
         - id: customersupport-service
           uri: http://localhost:8090
           predicates:
