--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -24,6 +24,12 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: earliest
+      spring.json.trusted.packages: "*"
+    logging:
+      level:
+       org.apache.kafka: DEBUG
+       org.springframework.kafka: DEBUG
+
 
 server:
   port: ${SERVER_PORT:8087}
