--- a/NewCustomerService1-main/src/main/resources/application.properties
+++ b/NewCustomerService1-main/src/main/resources/application.properties
@@ -1,88 +1,88 @@
+##spring.application.name=customersupport-service
+### ============================
+### SERVER CONFIG
+### ============================
+##server.port=8090
+##
+##
+### ============================
+### H2 DATABASE CONFIG
+### ============================
+##spring.datasource.url=jdbc:mysql://localhost:3306/customersupport_db
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.username=root
+##spring.datasource.password=root
+##
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.show-sql=true
+##spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+##
+### Enable H2 web console
+##spring.h2.console.enabled=true
+##spring.h2.console.path=/h2
+##
+##
+### ============================
+### POLICY SERVICE CONFIG
+### ============================
+### << Change this URL to match your Policy Service port >>
+##services.policy.base-url=http://localhost:8082/api/policies
+##
+### Timeouts for RestTemplate
+##services.policy.connect-timeout-ms=3000
+##services.policy.read-timeout-ms=5000
+##
+##
+### ============================
+### LOGGING
+### ============================
+##logging.level.root=INFO
+##logging.level.org.springframework.web.client.RestTemplate=INFO
+#
+#
 #spring.application.name=customersupport-service
+#
 ## ============================
 ## SERVER CONFIG
 ## ============================
 #server.port=8090
 #
-#
 ## ============================
-## H2 DATABASE CONFIG
+## MYSQL DATABASE CONFIG
 ## ============================
-#spring.datasource.url=jdbc:mysql://localhost:3306/customersupport_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/customersupport_db?useSSL=false&serverTimezone=UTC
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=Sahil@1402
 #
+## JPA / Hibernate
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+## Optional but recommended for Hibernate 6/7 (Spring Boot 3+/4):
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #
-## Enable H2 web console
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#
+## H2 console should be disabled when using MySQL
+#spring.h2.console.enabled=false
 #
 ## ============================
 ## POLICY SERVICE CONFIG
 ## ============================
-## << Change this URL to match your Policy Service port >>
-#services.policy.base-url=http://localhost:8082/api/policies
-#
-## Timeouts for RestTemplate
+#services.policy.base-url=http://localhost:8089/api/policies
 #services.policy.connect-timeout-ms=3000
 #services.policy.read-timeout-ms=5000
-#
 #
 ## ============================
 ## LOGGING
 ## ============================
 #logging.level.root=INFO
 #logging.level.org.springframework.web.client.RestTemplate=INFO
-
-
-spring.application.name=customersupport-service
-
-# ============================
-# SERVER CONFIG
-# ============================
-server.port=8090
-
-# ============================
-# MYSQL DATABASE CONFIG
-# ============================
-spring.datasource.url=jdbc:mysql://localhost:3306/customersupport_db?useSSL=false&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Sahil@1402
-
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-# Optional but recommended for Hibernate 6/7 (Spring Boot 3+/4):
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# H2 console should be disabled when using MySQL
-spring.h2.console.enabled=false
-
-# ============================
-# POLICY SERVICE CONFIG
-# ============================
-services.policy.base-url=http://localhost:8089/api/policies
-services.policy.connect-timeout-ms=3000
-services.policy.read-timeout-ms=5000
-
-# ============================
-# LOGGING
-# ============================
-logging.level.root=INFO
-logging.level.org.springframework.web.client.RestTemplate=INFO
-
-# ============================
-# KAFKA CONFIG
-# ============================
-spring.kafka.bootstrap-servers=localhost:9092
-
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.add.type.headers=false
-
+#
+## ============================
+## KAFKA CONFIG
+## ============================
+#spring.kafka.bootstrap-servers=localhost:9092
+#
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.properties.spring.json.add.type.headers=false
+#
