--- a/payment-service/src/main/resources/application.yaml
+++ b/payment-service/src/main/resources/application.yaml
@@ -1,3 +1,30 @@
+#server:
+#  port: 8084
+# 
+#spring:
+#  application:
+#    name: PAYMENT-SERVICE
+# 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/paymentDB
+#    username: root
+#    password: Sahil@1402
+# 
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+# 
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+# 
+#razorpay:
+#  key: rzp_test_SEQHT7tqw33nRK
+#  secret: jE5vrELN6ipS2aBYS2VPn52t
+# 
+
 server:
   port: 8084
  
@@ -14,13 +41,27 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  # ✅ Kafka Configuration Added
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+       key-serializer: org.apache.kafka.common.serialization.StringSerializer
+       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      group-id: ${spring.application.name}
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      auto-offset-reset: earliest
  
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
  
 razorpay:
   key: rzp_test_SEQHT7tqw33nRK
   secret: jE5vrELN6ipS2aBYS2VPn52t
- 
